# vbm_project

./: .gitignore  README.md  grasp.py  test.py  thresholded_pointcloud.pcd
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/grasp_analysis_planning/lib/grasp_analysis_planning/: pcd_image_read
install/grasp_analysis_planning/share/grasp_analysis_planning/: package.bash  package.dsv  package.ps1  package.sh  (+1 more)
log/: latest_build  latest_list
src/finding_points/: grasp.py  hammer_flattened.pcd  pcd_png.py
src/grasp_analysis_planning/: setup.py
src/grasp_analysis_planning/grasp_analysis_planning/: grasp_planning.py
src/install/: local_setup.sh  setup.sh  setup.zsh
src/log/: latest_build
src/pc_to_png/: package.xml  setup.cfg  setup.py
src/pc_to_png/pc_to_png/: voxelized_drill_projected.pcd
src/pcl_sampling/: CMakeLists.txt
src/pcl_sampling/scripts/: img_processing.py
src/pcl_sampling/src/: pcl_sampling.cpp  slicing.cpp
src/preprocessing_pcl/: CMakeLists.txt  package.xml
src/preprocessing_pcl/src/: preprocessing_pcl.cpp
src/rgbd_img_cap/: setup.cfg  setup.py
src/rgbd_img_cap/rgbd_img_cap/: subscriber.py
src/rgbd_pc_converter_cpp/: CMakeLists.txt
src/rgbd_pc_converter_cpp/src/: rgbd_pc_converter_src.cpp
src/rgbd_to_pointcloud/: package.xml  setup.cfg  setup.py
src/rgbd_to_pointcloud/rgbd_to_pointcloud/: rgbd_to_pointcloud_node.py
src/vbm_project_env/worlds/: simulation.world
src/vbm_project_grasping/scripts/: grasp_synthesis_node.py
src/vbm_project_grasping/src/: processPointCloud.cpp
utils/: gen_point_clouds.py
(+59 files in other folders)
